adding All files

--- a/homepage.html
+++ b/homepage.html
@@ -149,20 +149,25 @@
 					<i class="fa fa-list-alt"></i>
 					</div>
 					<h3> Questionnaire </h3>
+
 				</div>
 
 				<div class="col-md-3 text-center">
 					<div class="icon">
+						<a href="Customer/Customer_Registration">
 					<i class="fa fa-user-circle-o"></i>
 					</div>
 					<h3> Customer Registration </h3>
+				</a>
 				</div>
 
 				<div class="col-md-3 text-center">
 					<div class="icon">
+						<a href="Shops/Shop_Registration">
 					<i class="fa fa-cutlery"></i>
 					</div>
 					<h3> Shop Registration </h3>
+				</a>
 				</div>
 
 			</div>
